# ywtts

./: .gitignore  pyproject.toml
ywtts/: __init__.py
ywtts/modules/: __init__.py  vvox.pyd
ywtts/modules/model/: metas.json
ywtts/modules/rvc/: __init__.py
ywtts/modules/voicevox_core/: __init__.py
