[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ywtts"
description = "My text-to-speach project"
readme = "README.MD"
license = {file = "LICENSE"}
classifiers = {
  "Programming Language :: Python :: 3:10",
}
dependencies = [
  "fairseq",
  "pyworld",
  "praat-parselmouth"
  "simpleaudio"
]
